# council-ai

./: .dockerignore  .env.example  .gitignore  AGENTIC_AI.md  AGI_AUTONOMOUS_SYSTEM.md  AGI_COMPLETE.md  ALL_LINKS.md  AUTOMATION_COMPLETE.md  AUTOMATION_STATUS.md  BUILD_NOW.md  COLAB_AGI_LEARNING.py  COLAB_COMPLETE.py  COLAB_CONTINUOUS_LEARNING.ipynb  COLAB_EMERGENCY_COLLECTION.py  COLAB_EMERGENCY_FIX.py  COLAB_FINETUNING.md  COLAB_FIX_NOW.md  COLAB_QUICK_START.md  COLAB_REAL_LEARNING.py  COLAB_SIMPLE_FIX.py  COLAB_STEP_BY_STEP.md  COLAB_TROUBLESHOOTING.md  COMPLETE_SYSTEM.md  Dockerfile  ENSEMBLE_AND_LEARNING.md  GITHUB_UPDATE_COMPLETE.md  HF_TOKEN_SETUP.md  INSTALL_GPU.md  LICENSE  LOCAL_GPU_SETUP.md  MODEL_CLONING_GUIDE.md  MODEL_ROTATION.md  Makefile  OPTION_B_HUGGINGFACE.md  PROFESSIONAL_GUIDE.md  QUICKSTART_COLAB.md  QUICKSTART_OPTION_B.md  README.md  RTX_4060_GUIDE.md  SETUP_RTX_4060_NOW.md  (+16 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
api/: main.py  unified.py
cli/: app.py
council/: __init__.py  agi_features.py  config.py  continuous_learning.py  data_analytics.py  forensic_models.py  graph.py  llm.py  model_ensemble.py  model_hub.py  model_rotation.py  movie_creator.py  unified_agi.py
docs/: AGI_ROADMAP.md
model_deployments/: education_config.json
movies/: 20251107_162052_metadata.json
plans/: 01_audit.md  04_feature_pipeline.md  08_execution_roadmap.md  14_resilience_security.md  17_data_analytics.md
scripts/: auto_build_and_deploy.py  auto_collect_all_data.py  auto_continuous_learning.py  auto_run.py  (+10 more)
(+42 files in other folders)
